--- a/index.html
+++ b/index.html
@@ -10,7 +10,123 @@
 </head>
 
 <body>
-    <h1>Panda roj khai anda</h1>
+    <header class="container">
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="images/logo.png" alt="" class="d-inline-block align-text-top">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" href="#">Shoes</a>
+                        <a class="nav-link" href="#">Backpack</a>
+                        <a class="nav-link disabled">Subscribe</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <!-- slider start -->
+        <section class="mt-5">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner  ">
+                    <div class="carousel-item active bg-info border rounded ps-5 pt-3 pd-3 pb-3  ">
+                        <div class="row">
+                            <div class="col-lg-7 d-flex align-items-center ">
+                                <div>
+                                    <h2>Cool Dude Headphone</h2>
+                                    <p>This is the best headphone in the world for people who just want to waste time in
+                                        front of funky world. </p>
+                                    <h1>$420</h1>
+                                    <div class="btn btn-warning">Buy Now</div>
+                                </div>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item active bg-info border rounded ps-5 pt-3 pd-3 pb-3  ">
+                        <div class="row">
+                            <div class="col-lg-7 d-flex align-items-center ">
+                                <div>
+                                    <h2> X-Box for your living room</h2>
+                                    <p>This is the best x-box in the world for people who just want to waste time in
+                                        front of fake sports. </p>
+                                    <h1>$600</h1>
+                                    <div class="btn btn-warning">Buy Now</div>
+                                </div>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item active bg-info border rounded ps-5 pt-3 pd-3 pb-3  ">
+                        <div class="row">
+                            <div class="col-lg-7 d-flex align-items-center ">
+                                <div>
+                                    <h2>Mega LCD TV For Sports</h2>
+                                    <p>This is the best tv in the world for people who just want to waste time in front
+                                        of tv. </p>
+                                    <h1>$1200</h1>
+                                    <div class="btn btn-warning">Buy Now</div>
+                                </div>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+        <!-- slider end  -->
+    </header>
+    <main>
+        <!-- catagory stary -->
+        <section>
+            <div class="container text-center my-5">
+                <div class="row g-2">
+                    <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+                        <div class="p-3 border bg-warning d-flex align-items-center rounded-3  ">
+                            <h1 class="text-white ms-4 me-5"> Watch</h1>
+                            <img src="images/categories/watch.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+                        <div class="p-3 border bg-primary d-flex align-items-center rounded-3  ">
+                            <h1 class="text-white ms-4 me-5 ">Bag</h1>
+                            <img src="images/categories/bag.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+                        <div class="p-3 border bg-warning d-flex align-items-center rounded-3  ">
+                            <h1 class="text-white ms-4 me-5"> Shoe</h1>
+                            <img src="images/categories/shoes.png" alt="">
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- catagory end -->
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
