added footer and fixed-top

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="container">
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg fixed-top bg-light">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="images/logo.png" alt="" class="d-inline-block align-text-top">
@@ -24,9 +24,9 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        <a class="nav-link" href="#">Shoes</a>
-                        <a class="nav-link" href="#">Backpack</a>
-                        <a class="nav-link disabled">Subscribe</a>
+                        <a class="nav-link" href="#Shoes">Shoes</a>
+                        <a class="nav-link" href="#Backpack">Backpack</a>
+                        <a class="nav-link " href="#subscribe">Subscribe</a>
                     </div>
                 </div>
             </div>
@@ -127,7 +127,7 @@
         </section>
         <!-- catagory end -->
         <!-- product added -->
-        <section class="container my-5">
+        <section class="container my-5" id="Shoes">
             <h2>Shoes</h2>
             <div class="row row-cols-1 row-col-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -176,7 +176,79 @@
             </div>
         </section>
         <!-- product end -->
+        <!-- Backpack section Start -->
+        <section class="container my-5" id="Backpack">
+            <h2>Backpack</h2>
+            <div class="row row-cols-1 row-col-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card h-100 border-0 shadow-lg">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body ">
+                            <h5 class="card-title">Red Bag/h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to
+                                    additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-3 ">
+                            <h3>$100</h3>
+                            <div class="btn btn-warning">Buy now</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100  border-0 shadow-lg">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Blue Bag</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <div class="m-3">
+                            <h3>$110</h3>
+                            <div class="btn btn-warning">Buy now</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100  border-0  shadow-lg">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Black Bag</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                        </div>
+                        <div class="m-3">
+                            <h3>$140</h3>
+                            <div class="btn btn-warning">Buy now</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Backpack section End -->
+        <!-- subscribe Start -->
+        <section style="height: 350px"
+            class="container rounded-3 d-flex justify-content-center bg-info align-items-center" id="subscribe">
+            <div>
+                <h2>LET'S STAY IN TOUCH</h2>
+                <p>Get updates on sales, specials and more</p>
+                <form>
+                    <div class="mb-1">
+
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+
+                    </div>
+
+                    <button type="submit" class="btn btn-warning">Submit</button>
+                </form>
+            </div>
+        </section>
+        <!-- subscribe End -->
     </main>
+    <footer class="text-center mt-2">
+        <p><small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria. </small></p>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
