fix red bag html h5 tag bug

--- a/index.html
+++ b/index.html
@@ -184,10 +184,10 @@
                     <div class="card h-100 border-0 shadow-lg">
                         <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
                         <div class="card-body ">
-                            <h5 class="card-title">Red Bag/h5>
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to
-                                    additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title">Red Bag </h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural
+                                lead-in to
+                                additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3 ">
                             <h3>$100</h3>
