--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=script, initial-scale=1.0">
     <title>Panda commerce</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+    <!-- custom design -->
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 
 <body>
@@ -35,7 +38,7 @@
         <section class="mt-5">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner  ">
-                    <div class="carousel-item active bg-info border rounded ps-5 pt-3 pd-3 pb-3  ">
+                    <div class="carousel-item active panda-bg-info border rounded ps-5 pt-3 pd-3 pb-3  ">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center ">
                                 <div>
@@ -43,7 +46,7 @@
                                     <p>This is the best headphone in the world for people who just want to waste time in
                                         front of funky world. </p>
                                     <h1>$420</h1>
-                                    <div class="btn btn-warning">Buy Now</div>
+                                    <div class="btn panda-btn-color">Buy Now</div>
                                 </div>
                             </div>
                             <div class="col-lg-5">
@@ -51,7 +54,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item active bg-info border rounded ps-5 pt-3 pd-3 pb-3  ">
+                    <div class="carousel-item active panda-bg-info border rounded ps-5 pt-3 pd-3 pb-3  ">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center ">
                                 <div>
@@ -59,7 +62,7 @@
                                     <p>This is the best x-box in the world for people who just want to waste time in
                                         front of fake sports. </p>
                                     <h1>$600</h1>
-                                    <div class="btn btn-warning">Buy Now</div>
+                                    <div class="btn panda-btn-color">Buy Now</div>
                                 </div>
                             </div>
                             <div class="col-lg-5">
@@ -67,7 +70,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item active bg-info border rounded ps-5 pt-3 pd-3 pb-3  ">
+                    <div class="carousel-item active panda-bg-info border rounded ps-5 pt-3 pd-3 pb-3  ">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center ">
                                 <div>
@@ -75,7 +78,7 @@
                                     <p>This is the best tv in the world for people who just want to waste time in front
                                         of tv. </p>
                                     <h1>$1200</h1>
-                                    <div class="btn btn-warning">Buy Now</div>
+                                    <div class="btn panda-btn-color">Buy Now</div>
                                 </div>
                             </div>
                             <div class="col-lg-5">
@@ -99,10 +102,10 @@
         <!-- slider end  -->
     </header>
     <main>
-        <!-- catagory stary -->
+        <!-- catagory star -->
         <section>
             <div class="container text-center my-5">
-                <div class="row g-2">
+                <div class="row g-4 ">
                     <div class="col-lg-4 col-md-6 col-sm-12 col-12">
                         <div class="p-3 border bg-warning d-flex align-items-center rounded-3  ">
                             <h1 class="text-white ms-4 me-5"> Watch</h1>
@@ -116,7 +119,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 col-12">
-                        <div class="p-3 border bg-warning d-flex align-items-center rounded-3  ">
+                        <div class="p-3 border shoe-bg-color d-flex align-items-center rounded-3  ">
                             <h1 class="text-white ms-4 me-5"> Shoe</h1>
                             <img src="images/categories/shoes.png" alt="">
                         </div>
@@ -140,7 +143,7 @@
                         </div>
                         <div class="m-3 ">
                             <h3>$120</h3>
-                            <div class="btn btn-warning">Buy now</div>
+                            <div class="btn panda-btn-color">Buy now</div>
                         </div>
                     </div>
                 </div>
@@ -154,7 +157,7 @@
                         </div>
                         <div class="m-3">
                             <h3>$320</h3>
-                            <div class="btn btn-warning">Buy now</div>
+                            <div class="btn panda-btn-color">Buy now</div>
                         </div>
                     </div>
                 </div>
@@ -169,7 +172,7 @@
                         </div>
                         <div class="m-3">
                             <h3>$400</h3>
-                            <div class="btn btn-warning">Buy now</div>
+                            <div class="btn panda-btn-color">Buy now</div>
                         </div>
                     </div>
                 </div>
@@ -191,7 +194,7 @@
                         </div>
                         <div class="m-3 ">
                             <h3>$100</h3>
-                            <div class="btn btn-warning">Buy now</div>
+                            <div class="btn panda-btn-color">Buy now</div>
                         </div>
                     </div>
                 </div>
@@ -205,7 +208,7 @@
                         </div>
                         <div class="m-3">
                             <h3>$110</h3>
-                            <div class="btn btn-warning">Buy now</div>
+                            <div class="btn panda-btn-color">Buy now</div>
                         </div>
                     </div>
                 </div>
@@ -220,7 +223,7 @@
                         </div>
                         <div class="m-3">
                             <h3>$140</h3>
-                            <div class="btn btn-warning">Buy now</div>
+                            <div class="btn panda-btn-color">Buy now</div>
                         </div>
                     </div>
                 </div>
@@ -229,7 +232,7 @@
         <!-- Backpack section End -->
         <!-- subscribe Start -->
         <section style="height: 350px"
-            class="container rounded-3 d-flex justify-content-center bg-info align-items-center" id="subscribe">
+            class="container rounded-3 d-flex justify-content-center panda-bg-info align-items-center" id="subscribe">
             <div>
                 <h2>LET'S STAY IN TOUCH</h2>
                 <p>Get updates on sales, specials and more</p>
@@ -240,7 +243,7 @@
 
                     </div>
 
-                    <button type="submit" class="btn btn-warning">Submit</button>
+                    <button type="submit" class="btn panda-btn-color">Submit</button>
                 </form>
             </div>
         </section>
